--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
-  "metadata": {
-    "exported_at": "2025-01-15T10:30:00.000Z",
-    "app_name": "X DKV 3 Album Foto",
-    "app_version": "2.0.0",
-    "total_items": 6,
-    "total_size": "2.4 MB",
-    "exported_by": "Admin X DKV 3"
+  "name": "album-foto-xdkv3",
+  "version": "3.0.0",
+  "description": "Aplikasi Album Foto Modern untuk Kelas X DKV 3",
+  "main": "src/main.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
+    "backup": "node scripts/backup.js",
+    "restore": "node scripts/restore.js"
   },
- 
+  "dependencies": {
+    "localforage": "^1.10.0",
+    "compressorjs": "^1.1.1",
+    "exif-js": "^2.3.0"
+  },
+  "devDependencies": {
+    "vite": "^4.4.9",
+    "gh-pages": "^6.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xdkv3/album-foto.git"
+  },
+  "keywords": ["album", "foto", "sekolah", "xdvk3"],
+  "author": "Kelas X DKV 3",
+  "license": "MIT",
+  "browserslist": [
+    "last 2 versions",
+    "not dead"
+  ]
+}
